<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mcv_poster_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/poster_height_movies_list"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true">
        
    <ImageView
        android:id="@+id/iv_trending_movie_poster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_poster" />

</com.google.android.material.card.MaterialCardView>
